feat: added last changes

--- a/yaml/client.yaml
+++ b/yaml/client.yaml
@@ -19,7 +19,7 @@ spec:
         app: client
     spec:
       containers:
-      - image: sergioarmgpl/client
+      - image: sergioarmgpl/client6
         name: client
         imagePullPolicy: Always
         env:
